force-app/main/default/objects/MessagingSession/MessagingSession.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>