force-app/main/default/objects/MessagingSession/fields/AvisoEnviado__c.field-meta.xml
<CustomField>
    <fullName>AvisoEnviado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aviso Enviado</label>
    <type>Checkbox</type>
</CustomField>