force-app/main/default/objects/MessagingSession/fields/CA_Contrato__c.field-meta.xml
<CustomField>
    <fullName>CA_Contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Sessões do Messaging</relationshipLabel>
    <relationshipName>SessoesMessaging</relationshipName>
    <type>Lookup</type>
</CustomField>