force-app/main/default/objects/MessagingSession/fields/CA_Extrato__c.field-meta.xml
<CustomField>
    <fullName>CA_Extrato__c</fullName>
    <label>Extrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>