force-app/main/default/objects/MessagingSession/fields/CA_Fila__c.field-meta.xml
<CustomField>
    <fullName>CA_Fila__c</fullName>
    <label>Fila</label>
    <length>100</length>
    <type>Text</type>
</CustomField>