force-app/main/default/objects/MessagingSession/fields/CA_ImoveisConta__c.field-meta.xml
<CustomField>
    <fullName>CA_ImoveisConta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Imóveis da Conta</label>
    <referenceTo>CA_ImoveisConta__c</referenceTo>
    <relationshipLabel>Sessões do Messaging</relationshipLabel>
    <relationshipName>Sess_es_do_Messaging</relationshipName>
    <type>Lookup</type>
</CustomField>