force-app/main/default/objects/MessagingSession/fields/CA_Imovel__c.field-meta.xml
<CustomField>
    <fullName>CA_Imovel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Imóvel</label>
    <referenceTo>CA_Imovel__c</referenceTo>
    <relationshipLabel>Sessões do Messaging</relationshipLabel>
    <relationshipName>SessoesMessaging</relationshipName>
    <type>Lookup</type>
</CustomField>