force-app/main/default/objects/MessagingSession/fields/CaseSubject__c.field-meta.xml
<CustomField>
    <fullName>CaseSubject__c</fullName>
    <formula>Case.Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assunto do caso</label>
    <type>Text</type>
</CustomField>