force-app/main/default/objects/MessagingSession/fields/Casos_da_Conta__c.field-meta.xml
<CustomField>
    <fullName>Casos_da_Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Casos da Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Messaging Sessions</relationshipLabel>
    <relationshipName>Messaging_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>