force-app/main/default/objects/MessagingSession/fields/Contato_da_Conta__c.field-meta.xml
<CustomField>
    <fullName>Contato_da_Conta__c</fullName>
    <formula>MessagingEndUser.MessagingPlatformKey</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contato da Conta</label>
    <type>Text</type>
</CustomField>