force-app/main/default/objects/MessagingSession/fields/Hora_de_Criacao_Relatorio__c.field-meta.xml
<CustomField>
    <fullName>Hora_de_Criacao_Relatorio__c</fullName>
    <formula>MID( TEXT( CreatedDate - (3/24)) , 12, 2) &amp; &quot;h&quot;</formula>
    <label>Hora de Criação (Relatório)</label>
    <type>Text</type>
</CustomField>