force-app/main/default/objects/MessagingSession/fields/Protocolo__c.field-meta.xml
<CustomField>
    <fullName>Protocolo__c</fullName>
    <label>Protocolo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>