force-app/main/default/objects/MessagingSession/fields/StatusTimeoutSessao__c.field-meta.xml
<CustomField>
    <fullName>StatusTimeoutSessao__c</fullName>
    <label>Status do Timeout da Sessao</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Warned</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>