force-app/main/default/objects/MessagingSession/fields/TME_formatado__c.field-meta.xml
<CustomField>
    <fullName>TME_formatado__c</fullName>
    <formula>IF(
    ISBLANK(TME_Mensagens__c),
    &quot;&quot;,
    TEXT( FLOOR(TME_Mensagens__c / 60) ) &amp; &quot;h &quot; &amp;
    TEXT( MOD( ROUND(TME_Mensagens__c, 0), 60) ) &amp; &quot;min&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TME_formatado</label>
    <type>Text</type>
</CustomField>