force-app/main/default/objects/MessagingSession/fields/TME_Mensagens__c.field-meta.xml
<CustomField>
    <fullName>TME_Mensagens__c</fullName>
    <formula>(EndTime - StartTime) *60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TME Mensagens</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>