force-app/main/default/objects/MessagingSession/fields/UltimaAtividadeCliente__c.field-meta.xml
<CustomField>
    <fullName>UltimaAtividadeCliente__c</fullName>
    <label>Ultima Atividade do Cliente</label>
    <type>DateTime</type>
</CustomField>