force-app/main/default/objects/MessagingSession/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Owner</columns>
    <columns>Name</columns>
    <columns>MessagingEndUser</columns>
    <columns>Contato_da_Conta__c</columns>
    <columns>Status</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Case</columns>
    <columns>ChannelType</columns>
    <columns>Origin</columns>
    <columns>CaseSubject__c</columns>
    <columns>CA_Imovel__c</columns>
    <columns>UltimaAtividadeCliente__c</columns>
    <columns>Opportunity</columns>
    <columns>SystemModstamp</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>