force-app/main/default/objects/MessagingSession/listViews/CA_AnalistaDesocupacao_MessagingSession.listView-meta.xml
<ListView>
    <fullName>CA_AnalistaDesocupacao_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Analista Desocupação</label>
    <queue>CA_AnalistaDesocupacao</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>