force-app/main/default/objects/MessagingSession/listViews/CA_AssistenteConta_MessagingSession.listView-meta.xml
<ListView>
    <fullName>CA_AssistenteConta_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Assistente de Conta</label>
    <queue>CA_AssistenteConta</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>