force-app/main/default/objects/MessagingSession/listViews/CA_Atendimento_MessagingSession.listView-meta.xml
<ListView>
    <fullName>CA_Atendimento_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Atendimento</label>
    <queue>CA_Atendimento</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>