force-app/main/default/objects/MessagingSession/listViews/CA_CentralAlugueis_MessagingSession.listView-meta.xml
<ListView>
    <fullName>CA_CentralAlugueis_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Central Aluguéis</label>
    <queue>CA_CentralAlugueis</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>