force-app/main/default/objects/MessagingSession/listViews/CA_CentralAlugueisCasos_MessagingSession.listView-meta.xml
<ListView>
    <fullName>CA_CentralAlugueisCasos_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Central Aluguéis Casos</label>
    <queue>CA_CentralAlugueisCasos</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>