force-app/main/default/objects/MessagingSession/listViews/CA_CobrancaAlugueis_MessagingSession.listView-meta.xml
<ListView>
    <fullName>CA_CobrancaAlugueis_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Cobrança Aluguéis</label>
    <queue>CA_CobrancaAlugueis</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>