force-app/main/default/objects/MessagingSession/listViews/CA_Encarteirado_MessagingSession.listView-meta.xml
<ListView>
    <fullName>CA_Encarteirado_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Encarteirado</label>
    <queue>CA_Encarteirado</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>