force-app/main/default/objects/MessagingSession/listViews/CA_GestorConta_MessagingSession.listView-meta.xml
<ListView>
    <fullName>CA_GestorConta_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Gestor de Conta</label>
    <queue>CA_GestorConta</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>