force-app/main/default/objects/MessagingSession/listViews/CA_OperacaoDesocupacao_MessagingSession.listView-meta.xml
<ListView>
    <fullName>CA_OperacaoDesocupacao_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Operação Desocupação</label>
    <queue>CA_OperacaoDesocupacao</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>