force-app/main/default/objects/MessagingSession/listViews/CA_OperacoesAdmFinanceiro_MessagingSession.listView-meta.xml
<ListView>
    <fullName>CA_OperacoesAdmFinanceiro_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Operações Adm Financeiro</label>
    <queue>CA_OperacoesAdmFinanceiro</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>