force-app/main/default/objects/MessagingSession/listViews/CA_RelacionamentoDesocupacao_MessagingSession.listView-meta.xml
<ListView>
    <fullName>CA_RelacionamentoDesocupacao_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Relacionamento Desocupação</label>
    <queue>CA_RelacionamentoDesocupacao</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>