force-app/main/default/objects/MessagingSession/listViews/CA_RelacionamentoManutencao_MessagingSession.listView-meta.xml
<ListView>
    <fullName>CA_RelacionamentoManutencao_MessagingSession</fullName>
    <filterScope>Queue</filterScope>
    <label>Relacionamento Manutenção</label>
    <queue>CA_RelacionamentoManutencao</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>